# ipOverTelegram

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  build.sh  client.c  close_tunnel.sh  main.c  open_client_tunnel.sh  open_server_tun.sh  open_server_tunnel.sh  open_tunnel.sh  server.c  server.py  spam.sh
encryptor/: encryptor.h
include/: client.h  encryptor.h  request.h  server.h  telegram.h  tunnel.h
src/: encryptor.c  request.c  telegram.c  tunnel.c
